--- a/style.css
+++ b/style.css
@@ -1,2 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
+:root{
+    --primary: #B73E3E;
+    --secondary: #DD5353;
+    --utility: #EDDBC0;
+    --background: #DBC8AC;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    letter-spacing: 3px;
+}
+
+body{
+    font-family: 'Secular One', sans-serif;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.85), rgba(255,255,255,.851)), url("./images/background.jpg"); */
+    background-color: var(--background);
+    background-size:cover;
+    /* color: white; */
+}
+
+.header{
+    /* border: 1px solid; */
+    margin: 48px auto 36px;
+    display: flex;
+    place-content: center;
+    font-size: 28px;
+    /* color: var(--primary); */
+}
+
+span{
+    color: var(--primary);
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.select-sign{
+    display: flex;
+    place-content: center;
+    gap: 32px;
+    margin: 32px;
+}
+
+button{
+    padding: 10px 72px;
+    border-radius: 24px;
+    font-size: 24px;
+    font-weight: bold;
+    border: none;
+    background-color: var(--utility);
+    filter: drop-shadow(0 0 0.75rem var(--utility));
+    cursor: pointer;
+}
+
+button:hover{
+    background-color:bisque;
+}
+
+
+
+.gameboard{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-rows: repeat(3, 1fr); */
+    gap: 12px;
+    background-color: rgb(131, 11, 11);
+}
+
+.board-section{
+    /* background-color: inherit; */
+    border: 4px solid   ;
+    padding: 64px;
+    /* border-radius: 16px; */
+}
+
+.restart{
+    margin: 48px;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
