--- a/style.css
+++ b/style.css
@@ -69,13 +69,17 @@ button:hover{
     /* grid-template-rows: repeat(3, 1fr); */
     gap: 12px;
     background-color: var(--primary);
+
 }
 
 .board-section{
     background-color: var(--background);
-    /* border: 4px solid   ; */
-    padding: 72px;
-    /* border-radius: 16px; */
+    display: flex;
+    place-content: center;
+    height: 144px;
+    width: 144px;
+    font-size: 110px;
+    max-height:fit-content;
 }
 
 .restart{
@@ -92,3 +96,5 @@ footer{
 footer p{
     letter-spacing: 16px;
 }
+
+
